tests/ui/resolve/issue-21221-2.edition2018.stderr
error[E0432]: unresolved import `foo`
  --> $DIR/issue-21221-2.rs:17:13
   |
LL |     pub use foo;
   |             ^^^ no external crate `foo`
   |
help: consider importing this module instead
   |
LL |     pub use crate::foo;
   |             +++++++

error[E0405]: cannot find trait `T` in this scope
  --> $DIR/issue-21221-2.rs:23:6
   |
LL | impl T for Foo { }
   |      ^ not found in this scope
   |
help: consider importing one of these traits
   |
LL + use crate::baz::T;
   |
LL + use crate::foo::bar::T;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0405, E0432.
For more information about an error, try `rustc --explain E0405`.
